# vcosetup

./: README.md  pyproject.toml
vcosetup/: cli.py
vcosetup/components/: docker.py  gitignore.py  license.py  pyproject.py
