[tool.poetry]
name = "vcosetup"
version = "1.0.0"
description = "Tools to help set up projects."
authors = ["vcokltfre <vcokltfre@gmail.com>"]
license = "MIT"
repository = "https://github.com/vcokltfre/vcosetup"

[tool.poetry.scripts]
vcos = "vcosetup.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
